# ocr-app

./: README.md  index.html  package.json  postcss.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
src/: App.vue  main.ts  routes.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: db.rs  error.rs  lib.rs  main.rs  models.rs  state.rs
src-tauri/src/ocr/: manga_ocr.rs  mod.rs  pp_ocr.rs
src/assets/: main.css
src/components/: AppLayout.vue  AppSidebar.vue  ScreenshotGallery.vue  TodoManager.vue
src/composables/: useScreenshots.ts  useTodos.ts
src/lib/: keys.ts  types.ts
src/views/: DashboardPage.vue  OverlayPage.vue  ScreenshotPage.vue  SettingPage.vue  StatisticsPage.vue  StudyPage.vue  TodoPage.vue  WordsPage.vue
