[package]
name = "ocr-app"
version = "0.1.0"
description = "An app to take a screenshot and assist with Japanese language learning"
authors = ["madtofan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "langcapture"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png", "image-ico"] }
tauri-plugin-global-shortcut = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.0.9" # Excellent cross-platform screenshot crate
chrono = "0.4" # For naming files with timestamps
# Add sqlx with sqlite and the tokio runtime
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "tls-native-tls"] }
# Tauri uses tokio, but we explicitly add it to ensure we have full features
tokio = { version = "1", features = ["full"] }
base64 = "0.22.1"
tauri-plugin-process = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
