[package]
name = "ocr-app"
version = "0.1.0"
description = "An app to take a screenshot and assist with Japanese language learning"
authors = ["madtofan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "langcapture"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri packages
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png", "image-ico"] }
tauri-plugin-global-shortcut = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"

# Utilities packages
base64 = "0.22.1"
chrono = "0.4" # For naming files with timestamps
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] } # Tauri uses tokio, but we explicitly add it to ensure we have full features

# Databases packages
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "tls-native-tls"] } # Add sqlx with sqlite and the tokio runtime

# OCR Related packages
image = "0.25.9"
ort = { version = "2.0.0-rc.10", features= ["load-dynamic", "ndarray", "copy-dylibs"] }
ndarray = "0.16.1"
tokenizers = "0.22.2"
xcap = "0.0.9" # Excellent cross-platform screenshot crate
imageproc = "0.25.0"
lazy_static = "1.5.0"
as-slice = "0.2.1"
thiserror = "2.0.17"
anyhow = "1.0.100"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
